fixed design on mobile apps

--- a/portfolio/src/main/webapp/css/blogposts.css
+++ b/portfolio/src/main/webapp/css/blogposts.css
@@ -11,10 +11,16 @@ body {
   display: block;
 }
 
+.title{
+    display: flex;
+    height: 100vh;
+}
+
 .title h1 {
   font-size: calc(8rem + 6vw);
   color: steelblue;
   border-color: teal;
+  display: inline-table;
 }
 
 #umbrella {
@@ -54,6 +60,10 @@ body {
   text-align: center;
 }
 
+.summary p{
+  overflow-wrap: anywhere;
+}
+
 .footer {
   display: inline-block;
   margin-top: 1.75%;
@@ -63,6 +73,7 @@ body {
 .blog-title {
   font-size: calc(1.5rem + 1.5vw);
   margin-bottom: 2vw;
+  text-align: center;
 }
 
 .double-border {
@@ -71,14 +82,14 @@ body {
 
 .blogpage-link {
   position: absolute;
-  width: 15vw;
   height: auto;
   top: 0;
-  left: 85%;
+  right: 0;
   color: steelblue;
-  font-size: calc(.5rem + 3vw);
+  font-size: calc(1.5rem + 3vw);
   border-bottom: 3px double teal;
   border-left: 3px double teal;
+  text-align: center;
 }
 
 a {
